fix thumbnail alignment

--- a/h5p/thumbnail.css
+++ b/h5p/thumbnail.css
@@ -5,9 +5,9 @@
     background-color: #fff; /* White background color */
     border-radius: 10px; /* Rounded edges */
     padding: 20px; /* Padding to create some space around the thumbnails */
-    margin: 10px; /* Margin to create space between thumbnail containers */
+    margin: 10px 5%; /* Margin to create space between thumbnail containers */
     display: inline-block; /* Display thumbnail containers inline to create columns */
-    width: calc(50% - 20px); /* 50% width for two columns with margins included */
+    width: 40%; /* 50% width for two columns with margins included */
     box-sizing: border-box; /* Include padding and border in the element's total width */
     text-align: center; /* Center the content within the thumbnail containers */    
 }
@@ -30,6 +30,6 @@
     background-color: #9ccc9c; /* Background color for category titles */
     border-radius: 10px; /* Rounded edges for category titles */
     padding: 10px; /* Padding for category titles */
-    margin: 10px 0; /* Margin above and below category titles, remove left/right margin */
+    margin: 20px 5%; /* Margin above and below category titles, remove left/right margin */
     text-align: center; /* Center the text within category titles */
 }
